--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
+header {
+  text-align: center;
+  background-color: #282c34;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.App-content {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 2rem 2rem;
+  padding: 2rem;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+button {
+  transition: box-shadow 0.3s ease;
+  font-size: x-large;
+  color: #fff;
+  background-color: cornflowerblue;
+  border-radius: 10%;
+  border-color: #fff;
+  margin: 1rem 0.5rem;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  box-shadow: 0 0.2rem rgba(0,0,0,0.5);
 }
