--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -14,3 +14,16 @@ input[type=text]:focus {
 form div {
     margin: 0
 }
+
+.button {
+    width: 115px;
+    height: 25px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    margin: 0 1rem;
+    font-weight: bold;
+    line-height: 25px;
+}
